cambio de i por la o

--- a/history.txt
+++ b/history.txt
@@ -3,4 +3,4 @@ Esta es la historia de Viller cruz
 
 viller tiene 44 años y quiere ser programador
 
-ni le importa la edad que tiene para aprender algo nuevo
+no le importa la edad que tiene para aprender algo nuevo
