Vuelo a adicionar una fila al archivo

--- a/history.txt
+++ b/history.txt
@@ -4,3 +4,5 @@ Esta es la historia de Viller cruz
 viller tiene 44 años y quiere ser programador
 
 no le importa la edad que tiene para aprender algo nuevo en la vida
+
+Esta enfocado  para conseguir lo que quiere 
